the first three section created

--- a/index.html
+++ b/index.html
@@ -4,70 +4,363 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>  <html class="no-js"> <![endif]-->
+
 <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
 
-    <!-- TITLE -->
-    <title>Adnan Afsari</title>
+  <!-- TITLE -->
+  <title>Newsweek</title>
 
 
-    <!-- META DATA -->
-    <meta name="description" content="">
-    <meta name="keywords" content="" />
-    <meta name="author" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!-- META DATA -->
+  <meta name="description" content="">
+  <meta name="keywords" content="" />
+  <meta name="author" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <!-- =========================
+  <!-- =========================
          FAV AND TOUCH ICONS
     ============================== -->
-    <link rel="icon" href="assets/images/favicon.ico">
-    <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114.png">
+  <link rel="icon" href="assets/images/favicon.ico">
+  <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114.png">
 
-    <!-- =========================
+  <!-- =========================
          STYLESHEETS
     ============================== -->
-    
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
 <body>
-        <!--[if lt IE 7]>
+  <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-<main role="main">
 
-<!-- =========================
+
+  <!-- =========================
     HEADER
 ============================== -->
 
-<header >
+  <header>
 
-<!-- .navbar -->
-<nav>
-
-
-</nav>
-<!-- /.navbar -->
-
-</header>
+    <!-- .navbar -->
+    <nav>
 
 
-</main>
+    </nav>
+    <!-- /.navbar -->
+
+  </header>
+
+  <!--- The first section begins -->
+  <div class="container-fluid content">
+    <div class="row">
+      <div class="col-md-6 col-sm-6 col-xs-12">
+        <div class="top-stories">
+          <h3>TOP STORY</h3>
+          <div class="content-block">
+            <img src="assets/images/block2.png" alt="Image block">
+            <h2>Military Border Mission Could Cost $470 Million In 2019</h2>
+            <p>The deployment of active-duty U.S. troops has been extended to September 30.</p>
+          </div>
+          <div class="content-panel">
+            <h3>Trump Wall GoFundMe Donors OK $7 Million for New Plan</h3>
+          </div>
+          <h3>MORE STORIES</h3>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 text-col">
+              <h3>Federal Workers Raise $400,000 on GoFundMe </h3>
+              <p>"Those in power to take a long hard look at what they are doing to the people that make up this country," said Tina Gonzalez-Poole, whose family is affected by the ongoing partial government shutdown.</p>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 text-col">
+              <h3>Federal Workers Raise $400,000 on GoFundMe </h3>
+              <p>"Those in power to take a long hard look at what they are doing to the people that make up this country," said Tina Gonzalez-Poole, whose family is affected by the ongoing partial government shutdown.</p>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 text-col">
+              <h3>Federal Workers Raise $400,000 on GoFundMe </h3>
+              <p>"Those in power to take a long hard look at what they are doing to the people that make up this country," said Tina Gonzalez-Poole, whose family is affected by the ongoing partial government shutdown.</p>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 text-col">
+              <h3>Federal Workers Raise $400,000 on GoFundMe </h3>
+              <p>"Those in power to take a long hard look at what they are doing to the people that make up this country," said Tina Gonzalez-Poole, whose family is affected by the ongoing partial government shutdown.</p>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 text-col">
+              <h3>Federal Workers Raise $400,000 on GoFundMe </h3>
+              <p>"Those in power to take a long hard look at what they are doing to the people that make up this country," said Tina Gonzalez-Poole, whose family is affected by the ongoing partial government shutdown.</p>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 text-col">
+              <h3>Federal Workers Raise $400,000 on GoFundMe </h3>
+              <p>"Those in power to take a long hard look at what they are doing to the people that make up this country," said Tina Gonzalez-Poole, whose family is affected by the ongoing partial government shutdown.</p>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 text-col">
+              <h3>Federal Workers Raise $400,000 on GoFundMe </h3>
+              <p>"Those in power to take a long hard look at what they are doing to the people that make up this country," said Tina Gonzalez-Poole, whose family is affected by the ongoing partial government shutdown.</p>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 text-col">
+              <h3>Federal Workers Raise $400,000 on GoFundMe </h3>
+              <p>"Those in power to take a long hard look at what they are doing to the people that make up this country," said Tina Gonzalez-Poole, whose family is affected by the ongoing partial government shutdown.</p>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 text-col">
+              <h3>Federal Workers Raise $400,000 on GoFundMe </h3>
+              <p>"Those in power to take a long hard look at what they are doing to the people that make up this country," said Tina Gonzalez-Poole, whose family is affected by the ongoing partial government shutdown.</p>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 text-col">
+              <h3>Federal Workers Raise $400,000 on GoFundMe </h3>
+              <p>"Those in power to take a long hard look at what they are doing to the people that make up this country," said Tina Gonzalez-Poole, whose family is affected by the ongoing partial government shutdown.</p>
+            </div>
+          </div>
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-    <script src="assets/js/plugins.js"></script>
-    <script src="assets/js/main.js"></script>
+
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 col-xs-12 order-md-first">
+        <div class="featured-stories">
+          <h3>FEATURED STORIES</h3>
+          <div class="content-block">
+            <img src="assets/images/block1.png" alt="Image block">
+            <h2>Air Travel Less Safe in Shutdown, Says Union Rep</h2>
+            <p>"I would say it is less safe today than a month ago. Absolutely," Trish Gilbert, executive vice president of the National Air Traffic Controllers Association, told CNN. “We do not have the professionals on the job.</p>
+          </div>
+          <div class="content-panel">
+            <h3>Ocasio-Cortez Seeks Out McConnell to End Shutdown</h3>
+          </div>
+
+          <div class="content-block">
+            <img src="assets/images/block12.png" alt="Image block">
+            <h2>U.S. Troops Reportedly Killed in Syria Blast</h2>
+            <p>A number of U.S. troops have reportedly been killed by a suicide bombing in the northern Syrian city of Manbij.</p>
+          </div>
+          <div class="content-panel">
+            <h3>Israel Warns Iran It Can Fight Multiple Wars at Once</h3>
+          </div>
+
+          <div class="content-block">
+            <img src="assets/images/block13.png" alt="Image block">
+            <h2>Unpaid Federal Employees Are Turning to Food Banks</h2>
+            <p>"We might have to make the amount of the food baskets smaller if it continues, but our doors will stay open," one food bank worker said.</p>
+          </div>
+          <div class="content-panel">
+            <h3>Ocasio-Cortez Criticizes Trump in First House Speech</h3>
+          </div>
+
+          <div class="content-block">
+            <img src="assets/images/block1.png" alt="Image block">
+            <h2>Air Travel Less Safe in Shutdown, Says Union Rep</h2>
+            <p>"I would say it is less safe today than a month ago. Absolutely," Trish Gilbert, executive vice president of the National Air Traffic Controllers Association, told CNN. “We do not have the professionals on the job.</p>
+          </div>
+          <div class="content-panel">
+            <h3>Ocasio-Cortez Seeks Out McConnell to End Shutdown</h3>
+          </div>
+
+          <div class="content-block">
+            <img src="assets/images/block12.png" alt="Image block">
+            <h2>U.S. Troops Reportedly Killed in Syria Blast</h2>
+            <p>A number of U.S. troops have reportedly been killed by a suicide bombing in the northern Syrian city of Manbij.</p>
+          </div>
+          <div class="content-panel">
+            <h3>Israel Warns Iran It Can Fight Multiple Wars at Once</h3>
+          </div>
+
+          <div class="content-block">
+            <img src="assets/images/block13.png" alt="Image block">
+            <h2>Unpaid Federal Employees Are Turning to Food Banks</h2>
+            <p>"We might have to make the amount of the food baskets smaller if it continues, but our doors will stay open," one food bank worker said.</p>
+          </div>
+          <div class="content-panel">
+            <h3>Ocasio-Cortez Criticizes Trump in First House Speech</h3>
+          </div>
+
+
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 col-xs-12">
+        <div class="opinion">
+          <h3>OPINION</h3>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 col-sm-4 col-xs-4 img-col">
+              <img src="assets/images/thumb1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 col-sm-8 col-xs-8 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 col-sm-4 col-xs-4 img-col">
+              <img src="assets/images/thumb1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 col-sm-8 col-xs-8 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 col-sm-4 col-xs-4 img-col">
+              <img src="assets/images/thumb1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 col-sm-8 col-xs-8 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 col-sm-4 col-xs-4 img-col">
+              <img src="assets/images/thumb1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 col-sm-8 col-xs-8 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 col-sm-4 col-xs-4 img-col">
+              <img src="assets/images/thumb1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 col-sm-8 col-xs-8 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 col-sm-4 col-xs-4 img-col">
+              <img src="assets/images/thumb1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 col-sm-8 col-xs-8 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+
+          <h3>LATEST NEWS</h3>
+          <div class="row content-flex-panel">
+            <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <!--- The first section ends -->
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+  <script src="assets/js/plugins.js"></script>
+  <script src="assets/js/main.js"></script>
 
 
 </body>
+
 </html>
