editor picks, inthe megazine and featured slideshow done

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- =========================
          STYLESHEETS
     ============================== -->
-    
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
     <link rel="stylesheet" href="assets/css/style.css">
@@ -41,7 +41,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-<main role="main">
+
 
 <!-- =========================
     HEADER
@@ -59,7 +59,162 @@
 </header>
 
 
-</main>
+<!-- =========================
+    IN THE MAGAZINE
+============================== -->
+
+<section class="inthe-magazine section-generic">
+    <div class="container">
+
+        <h1 class="text-center">IN THE MAGAZINE</h1>
+
+        <div class="row">
+          <div class="col-md-3">
+            <img src="assets/images/1.png" alt="Blog-post-image">
+            <h4>Justice for America: Al-Qaeda Militant Dead</h4>
+          </div>
+          <div class="col-md-3">
+            <img src="assets/images/1.png" alt="Blog-post-image">
+            <h4>Justice for America: Al-Qaeda Militant Dead</h4>
+          </div>
+          <div class="col-md-3">
+            <img src="assets/images/1.png" alt="Blog-post-image">
+            <h4>Justice for America: Al-Qaeda Militant Dead</h4>
+          </div>
+          <div class="col-md-3">
+            <img src="assets/images/1.png" alt="Blog-post-image">
+            <h4>Justice for America: Al-Qaeda Militant Dead</h4>
+          </div>
+        </div>
+
+        <div class="row mg-top">
+          <div class="col-md-3">
+            <img src="assets/images/1.png" alt="Blog-post-image">
+            <h4>Justice for America: Al-Qaeda Militant Dead</h4>
+          </div>
+          <div class="col-md-3">
+            <img src="assets/images/1.png" alt="Blog-post-image">
+            <h4>Justice for America: Al-Qaeda Militant Dead</h4>
+          </div>
+          <div class="col-md-3">
+            <img src="assets/images/1.png" alt="Blog-post-image">
+            <h4>Justice for America: Al-Qaeda Militant Dead</h4>
+          </div>
+          <div class="col-md-3">
+            <img src="assets/images/1.png" alt="Blog-post-image">
+            <h4>Justice for America: Al-Qaeda Militant Dead</h4>
+          </div>
+        </div>
+    </div>
+</section><!-- /.inthemegazine -->
+
+
+<!-- =========================
+    EDITOR'S PICK
+============================== -->
+
+<section class="editor-pick section-generic">
+    <div class="container">
+
+        <h1 class="text-center">EDITOR'S PICK</h1>
+
+        <div class="row">
+          <div class="col-md-3">
+            <img src="assets/images/2.png" alt="Blog-post-image">
+            <h4>Snowden Hits Out At CIA Director Over Torture Legacy</h4>
+            <p>A "culture of impunity" has "corrupted not just our system of intelligence,
+              but really, our system of government," whistleblower Edward Snowden says.</p>
+          </div>
+          <div class="col-md-3">
+            <img src="assets/images/2.png" alt="Blog-post-image">
+            <h4>Snowden Hits Out At CIA Director Over Torture Legacy</h4>
+            <p>A "culture of impunity" has "corrupted not just our system of intelligence,
+              but really, our system of government," whistleblower Edward Snowden says.</p>
+          </div>
+          <div class="col-md-3">
+            <img src="assets/images/2.png" alt="Blog-post-image">
+            <h4>Snowden Hits Out At CIA Director Over Torture Legacy</h4>
+            <p>A "culture of impunity" has "corrupted not just our system of intelligence,
+              but really, our system of government," whistleblower Edward Snowden says.</p>
+          </div>
+          <div class="col-md-3">
+            <img src="assets/images/2.png" alt="Blog-post-image">
+            <h4>Snowden Hits Out At CIA Director Over Torture Legacy</h4>
+            <p>A "culture of impunity" has "corrupted not just our system of intelligence,
+              but really, our system of government," whistleblower Edward Snowden says.</p>
+          </div>
+        </div>
+
+        <div class="row mg-top">
+          <div class="col-md-3">
+            <img src="assets/images/2.png" alt="Blog-post-image">
+            <h4>Snowden Hits Out At CIA Director Over Torture Legacy</h4>
+            <p>A "culture of impunity" has "corrupted not just our system of intelligence,
+              but really, our system of government," whistleblower Edward Snowden says.</p>
+          </div>
+          <div class="col-md-3">
+            <img src="assets/images/2.png" alt="Blog-post-image">
+            <h4>Snowden Hits Out At CIA Director Over Torture Legacy</h4>
+            <p>A "culture of impunity" has "corrupted not just our system of intelligence,
+              but really, our system of government," whistleblower Edward Snowden says.</p>
+          </div>
+          <div class="col-md-3">
+            <img src="assets/images/2.png" alt="Blog-post-image">
+            <h4>Snowden Hits Out At CIA Director Over Torture Legacy</h4>
+            <p>A "culture of impunity" has "corrupted not just our system of intelligence,
+              but really, our system of government," whistleblower Edward Snowden says.</p>
+          </div>
+          <div class="col-md-3">
+            <img src="assets/images/2.png" alt="Blog-post-image">
+            <h4>Snowden Hits Out At CIA Director Over Torture Legacy</h4>
+            <p>A "culture of impunity" has "corrupted not just our system of intelligence,
+              but really, our system of government," whistleblower Edward Snowden says.</p>
+          </div>
+        </div>
+    </div>
+</section><!-- /.editorpick -->
+
+<!-- =========================
+    FEATURED SLIDESHOWS
+============================== -->
+
+<section class="featured-slidershows section-generic">
+    <div class="container">
+
+        <h1 class="text-center">FEATURED SLIDESHOWS</h1>
+
+        <div class="row">
+          <div class="col-md-4">
+            <img src="assets/images/3.png" alt="Blog-post-image">
+            <h4>Ranked: The North American Cities with the Highest Quality of Life</h4>
+          </div>
+          <div class="col-md-4">
+            <img src="assets/images/3.png" alt="Blog-post-image">
+            <h4>Ranked: The North American Cities with the Highest Quality of Life</h4>
+          </div>
+          <div class="col-md-4">
+            <img src="assets/images/3.png" alt="Blog-post-image">
+            <h4>Ranked: The North American Cities with the Highest Quality of Life</h4>
+          </div>
+        </div>
+
+        <div class="row mg-top">
+          <div class="col-md-4">
+            <img src="assets/images/3.png" alt="Blog-post-image">
+            <h4>Ranked: The North American Cities with the Highest Quality of Life</h4>
+          </div>
+          <div class="col-md-4">
+            <img src="assets/images/3.png" alt="Blog-post-image">
+            <h4>Ranked: The North American Cities with the Highest Quality of Life</h4>
+          </div>
+          <div class="col-md-4">
+            <img src="assets/images/3.png" alt="Blog-post-image">
+            <h4>Ranked: The North American Cities with the Highest Quality of Life</h4>
+          </div>
+        </div>
+    </div>
+</section><!-- /.thefituredslideshow -->
+
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
