border div added

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <div class="container">
 
         <h1 class="text-center">IN THE MAGAZINE</h1>
+        <di class="border"></di>
 
         <div class="row">
           <div class="col-md-3">
@@ -117,6 +118,7 @@
     <div class="container">
 
         <h1 class="text-center">EDITOR'S PICK</h1>
+        <di class="border"></di>
 
         <div class="row">
           <div class="col-md-3">
@@ -182,6 +184,7 @@
     <div class="container">
 
         <h1 class="text-center">FEATURED SLIDESHOWS</h1>
+        <di class="border"></di>
 
         <div class="row">
           <div class="col-md-4">
