border fixed and title changed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
 
     <!-- TITLE -->
-    <title>Adnan Afsari</title>
+    <title>News Week</title>
 
 
     <!-- META DATA -->
@@ -67,7 +67,7 @@
     <div class="container">
 
         <h1 class="text-center">IN THE MAGAZINE</h1>
-        <di class="border"></di>
+        <div class="border"></div>
 
         <div class="row">
           <div class="col-md-3">
@@ -118,7 +118,7 @@
     <div class="container">
 
         <h1 class="text-center">EDITOR'S PICK</h1>
-        <di class="border"></di>
+        <div class="border"></div>
 
         <div class="row">
           <div class="col-md-3">
@@ -184,7 +184,7 @@
     <div class="container">
 
         <h1 class="text-center">FEATURED SLIDESHOWS</h1>
-        <di class="border"></di>
+        <div class="border"></div>
 
         <div class="row">
           <div class="col-md-4">
