first section updated

--- a/index.html
+++ b/index.html
@@ -164,6 +164,24 @@
               <p>"Those in power to take a long hard look at what they are doing to the people that make up this country," said Tina Gonzalez-Poole, whose family is affected by the ongoing partial government shutdown.</p>
             </div>
           </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 text-col">
+              <h3>Federal Workers Raise $400,000 on GoFundMe </h3>
+              <p>"Those in power to take a long hard look at what they are doing to the people that make up this country," said Tina Gonzalez-Poole, whose family is affected by the ongoing partial government shutdown.</p>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 text-col">
+              <h3>Federal Workers Raise $400,000 on GoFundMe </h3>
+              <p>"Those in power to take a long hard look at what they are doing to the people that make up this country," said Tina Gonzalez-Poole, whose family is affected by the ongoing partial government shutdown.</p>
+            </div>
+          </div>
 
 
 
