first section column content length edited

--- a/index.html
+++ b/index.html
@@ -304,8 +304,125 @@
               <h4>By Nigel Farage </h4>
             </div>
           </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 col-sm-4 col-xs-4 img-col">
+              <img src="assets/images/thumb1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 col-sm-8 col-xs-8 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 col-sm-4 col-xs-4 img-col">
+              <img src="assets/images/thumb1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 col-sm-8 col-xs-8 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 col-sm-4 col-xs-4 img-col">
+              <img src="assets/images/thumb1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 col-sm-8 col-xs-8 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 col-sm-4 col-xs-4 img-col">
+              <img src="assets/images/thumb1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 col-sm-8 col-xs-8 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-4 col-sm-4 col-xs-4 img-col">
+              <img src="assets/images/thumb1.png" alt="Small image block">
+            </div>
+            <div class="col-md-8 col-sm-8 col-xs-8 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
 
           <h3>LATEST NEWS</h3>
+          <div class="row content-flex-panel">
+            <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
+          <div class="row content-flex-panel">
+            <div class="col-md-5 col-sm-5 col-xs-5 img-col">
+              <img src="assets/images/small-block1.png" alt="Small image block">
+            </div>
+            <div class="col-md-7 col-sm-7 col-xs-7 text-col">
+              <h4>Farage: Second Vote May Win the Brexit We Want| Opinion </h4>
+              <h4>By Nigel Farage </h4>
+            </div>
+          </div>
           <div class="row content-flex-panel">
             <div class="col-md-5 col-sm-5 col-xs-5 img-col">
               <img src="assets/images/small-block1.png" alt="Small image block">
